examples/test/testpolicy15057.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15057
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key32: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value37
          key43: value38
          key19: value37
      podSelector:
        matchLabels:
          key40: value20
          key22: value48
